Final Push. Project Finished

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="index.css">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -24,14 +25,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>COVID News Application</title>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div className = "tweets">
     <a class="twitter-timeline" data-width="500" data-height="500" href="https://twitter.com/HSELive?ref_src=twsrc%5Etfw">Tweets by HSELive</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script><br>
-  </br>
-    <a class="twitter-timeline" data-width="500" data-height="500" float="right" href="https://twitter.com/NHS?ref_src=twsrc%5Etfw">Tweets by NHS</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </br>
+    <a class="twitter-timeline" data-width="500" data-height="500" href="https://twitter.com/NHS?ref_src=twsrc%5Etfw">Tweets by NHS</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
     </div>
   </body>
 
